@@ -4,6 +4,7 @@ aclocal.m4
 config.cache
 config.log
 config.status
+config.nice
 configure
 libtool
 libaprutil.la
