@@ -8,17 +8,21 @@ AC_INIT(export_vars.sh.in)
 AC_CONFIG_HEADER(include/private/apu_config.h)
 AC_CONFIG_AUX_DIR(../apr/build)
 
+sinclude(build/apu-conf.m4)
+sinclude(../apr/build/libtool.m4)
+sinclude(../apr/build/apr_common.m4)
+
+dnl Generate ./config.nice for reproducing runs of configure
+dnl 
+APR_CONFIG_NICE(config.nice)
+
+dnl # Some initial steps for configuration.  We setup the default directory
+dnl # and which files are to be configured.
+
 dnl Absolute source/build directory
 abs_srcdir=`(cd $srcdir && pwd)`
 abs_builddir=`pwd`
 
-sinclude(build/apu-conf.m4)
-sinclude(../apr/build/libtool.m4)
-
-AC_PROG_CC
-AC_PROG_AWK
-AC_CHECK_PROG(RM, rm, rm)
- 
 if test "$abs_builddir" != "$abs_srcdir"; then
   USE_VPATH=1
 fi
@@ -34,10 +38,10 @@ AC_SUBST(abs_srcdir)
 dnl
 dnl set up the compilation flags and stuff
 dnl
-INCLUDES="$INCLUDES -I\$(top_builddir)/include/private -I\$(top_builddir)/include"
+APR_ADDTO(INCLUDES, [-I\$(top_builddir)/include/private -I\$(top_builddir)/include])
 
 if test -n "$USE_VPATH"; then
-    INCLUDES="$INCLUDES -I\$(top_srcdir)/include"
+    APR_ADDTO(INCLUDES, [-I\$(top_srcdir)/include])
 fi
 
 dnl
@@ -49,14 +53,13 @@ APU_FIND_APR
 APU_CHECK_DBM
 APU_FIND_EXPAT
 
-INCLUDES="$INCLUDES $APR_INCLUDES"
+dnl Add in the INCLUDES from APR
+APR_ADDTO(INCLUDES, [$APR_INCLUDES])
+so_ext=$APR_SO_EXT
+lib_target=$APR_LIB_TARGET
+AC_SUBST(so_ext)
+AC_SUBST(lib_target)
 
-dnl
-dnl prep libtool
-dnl
-echo "performing libtool configuration..."
-
-AC_CANONICAL_SYSTEM
 LDFLAGS=""
 EXPAT_LINK=""
 case "$host_alias" in
@@ -71,51 +74,13 @@ case "$host_alias" in
     ;;
 esac
 
-dnl AC_PROG_LIBTOOL can't be invoked more than once, so this
-dnl logic can't be combined with the previous case statement
-
-case "$host_alias" in
-*os2*)
-    # Use a custom-made libtool replacement
-    echo "using aplibtool"
-    LIBTOOL="$APR_SOURCE_DIR/build/aplibtool"
-    ;;
-*)  dnl libtoolize requires that the following not be indented
-AC_PROG_LIBTOOL
-    if test "x$LTFLAGS" = "x"; then
-        LTFLAGS='--silent'
-    fi
-    ;;
-esac
-
-AC_ARG_ENABLE(libtool, [--with-libtool   use libtool to link the library],
-  [ use_libtool=$withval ], [ use_libtool="yes" ] )
- 
-if test "x$use_libtool" = "xyes"; then
-      lt_compile='$(LIBTOOL) $(LTFLAGS) --mode=compile $(COMPILE) -c $< && touch $@'
-      link='$(LIBTOOL) $(LTFLAGS) --mode=link $(LT_LDFLAGS) $(COMPILE) $(LDFLAGS) -o $@'
-      so_ext='lo'
-      lib_target='-rpath $(libdir) $$objects'
-else
-      lt_compile='$(COMPILE) -c $<'
-      link='$(AR) cr $(TARGET_LIB) $$objects; $(RANLIB) $(TARGET_LIB)'
-      so_ext='o'
-      lib_target=''
-fi
-
-AC_SUBST(lt_compile)
-AC_SUBST(link)
-AC_SUBST(so_ext)
-AC_SUBST(lib_target)
-AC_SUBST(LTFLAGS)
-AC_SUBST(LT_LDFLAGS)
 AC_SUBST(EXPAT_LINK)
 
 dnl
 dnl Prep all the flags and stuff for compilation and export to other builds
 dnl
-CFLAGS="$CFLAGS $INCLUDES $APR_EXPORT_CFLAGS $APR_EXPORT_CPPFLAGS"
-LIBS="$LIBS $APR_EXPORT_LIBS"
+APR_ADDTO(CFLAGS, [$CFLAGS $INCLUDES $APR_EXPORT_CFLAGS $APR_EXPORT_CPPFLAGS])
+APR_ADDTO(LIBS, [$APR_EXPORT_LIBS])
 
 AC_SUBST(APRUTIL_EXPORT_LIBS)
 AC_SUBST(LDFLAGS)
@@ -139,12 +104,12 @@ fi
 
 dnl
 dnl everthing is done. 
-MAKEFILES=" Makefile buckets/Makefile crypto/Makefile dbm/Makefile dbm/sdbm/Makefile encoding/Makefile hooks/Makefile uri/Makefile xml/Makefile misc/Makefile $test_Makefile"
+MAKEFILES="Makefile buckets/Makefile crypto/Makefile dbm/Makefile dbm/sdbm/Makefile encoding/Makefile hooks/Makefile uri/Makefile xml/Makefile misc/Makefile $test_Makefile"
 AC_OUTPUT([
-	export_vars.sh
-	include/private/apu_select_dbm.h
-        include/apu.h
-        $MAKEFILES
+    export_vars.sh
+    include/private/apu_select_dbm.h
+    include/apu.h
+    $MAKEFILES
 	])
 
 dnl #----------------------------- Fixup Makefiles for VPATH support
